--- a/style.css
+++ b/style.css
@@ -10,3 +10,9 @@
     width: 40px;
     height: 40px;
 }
+
+.snake {
+    background-color: blue;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
